--- a/peripleo/src/map/Map.scss
+++ b/peripleo/src/map/Map.scss
@@ -63,7 +63,7 @@
   .maplibregl-popup-tip {
     position:relative;
     top:3px;
-    border-bottom-color: #0095ff;
+    border-bottom-color: #000000;
   }
 
 }
